--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   carousel_slider: ^5.0.0
   google_fonts: ^4.0.4
   flutter_dotenv: ^5.2.1
+  image_picker: ^0.8.7+3
+  file_picker: ^5.0.1
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
