--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   image_picker: ^0.8.7+3
   file_picker: ^5.0.1
   intl: ^0.18.0
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
